[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Michael Leonard", email = "mleonard@packageaware.io"},
]
dependencies = [
    "image-fryer>=1.0.0",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
